Update page 3 removing errors_for and fixing tooltip font colour when it was wrapped in the legend tag

--- a/app/assets/stylesheets/components/_travel_tabs.scss
+++ b/app/assets/stylesheets/components/_travel_tabs.scss
@@ -20,7 +20,6 @@
     border-top: 0;
   }
 
-
   @include respond-to($mq-m) {
     .tab-selector__triggers-inner{
       display: flex;
@@ -65,4 +64,8 @@
     text-align: left;
     margin-bottom: 10px;
   }
+}
+
+.l-inline-legend-with-tooltip{
+  margin-bottom: 0.75rem;
 }
